--- a/index.html
+++ b/index.html
@@ -8,5 +8,7 @@
 </head>
 <body>
         <h1>BATMAN</h1>
+        <p>I am BATMAN</p>
+        <p>Этому городу нужен новый герой</p>
 </body>
 </html>
